--- a/.classpath
+++ b/.classpath
@@ -4,11 +4,6 @@
 	<classpathentry kind="src" path="src-plugins"/>
 	<classpathentry kind="src" path="src-client"/>
 	<classpathentry kind="src" path="src-test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-11">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="lib/ant-1.7.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-httpclient-3.1.jar" sourcepath="libsrc/commons-httpclient-3.1-src.zip"/>
 	<classpathentry kind="lib" path="lib/jfreechart.jar"/>
@@ -31,5 +26,6 @@
 	<classpathentry kind="lib" path="lib/internal/junit-4.13.jar"/>
 	<classpathentry kind="lib" path="lib/activation.jar"/>
 	<classpathentry kind="lib" path="lib/multiline-label-1.18.jar" sourcepath="libsrc/multiline-label-1.18-sources.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
